:art: Fix color contrast

--- a/interface/main.css
+++ b/interface/main.css
@@ -38,7 +38,8 @@ body {
   display: grid;
   gap: 2%;
   grid-template: auto / auto;
-  background-color: #2196F3;
+  /* --screen-color: white; Set with JS */
+  background-color: var(--screen-color);
   padding: 10px;
   box-sizing: border-box; /* Make width and height include boarder and padding */
   height: 100vh;
@@ -48,15 +49,18 @@ body {
 .counter {
   align-items: center;
   padding: 5%;
-  background-color: rgba(128, 128, 128, 0.3);
+  /* --color: color-mix(in oklab, var(--screen-color), rgba(255, 255, 255) 20%); Set with JS*/
+  background-color: var(--color);
   border: 1px solid rgba(0, 0, 0, 0.8);
   font-size: 20px;
   text-align: center;
 }
 
 .counter_text {
-  mix-blend-mode: difference;
-  color: white;
+  color: var(--color);
+  filter: invert(1) grayscale(1) brightness(1.3) contrast(9000);
+  mix-blend-mode: luminosity;
+  opacity: 0.95;
 }
 
 .left {
